--- a/src/styles/06_page/_p-what.scss
+++ b/src/styles/06_page/_p-what.scss
@@ -3,16 +3,16 @@
         width: 100%;
         height: auto;
         opacity: 0.2;
-        padding: 0 $spacing-lg 4rem;
+        padding: 0 $spacing $spacing-lg;
         @media (max-width: $container-width-md) {
-            padding: $spacing;
+            padding: $spacing-sm;
         }
-        @media (max-width: $container-width-sm) {
-            padding: 0;
-        }
+        // @media (max-width: $container-width-sm) {
+        //     padding: 0;
+        // }
     }
 
-    .row .col-3 {
+    .row .col-4 {
         @media (max-width: $container-width-sm) {
             flex-basis: 16%;
         }
